fixing outline problem on scrollbar

--- a/src/components/Album/Album.module.css
+++ b/src/components/Album/Album.module.css
@@ -13,6 +13,6 @@
 
 .container::-webkit-scrollbar-thumb {
   background-color: darkgrey;
-  outline: 1px solid slategrey;
+  outline: 0;
   border-radius: 50px;
 }
